src/test/deca/context/invalid/ext/TAB_field4.deca
class A{
    float[][] f;
}

class B{
}

{
    B b = new B();
    b.f[0][0][0];
}